--- a/NotesBackend/NotesBackend - Backup.csproj
+++ b/NotesBackend/NotesBackend - Backup.csproj
@@ -18,10 +18,7 @@
     </PackageReference>
     <PackageReference Include="Swashbuckle" Version="5.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.5.0" />
   </ItemGroup>
 
 </Project>
