[Add] more API endpoints (and their relative Mappers and DTOs)

--- a/NotesBackend/appsettings.json
+++ b/NotesBackend/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Data Source=MSI\\MSSQLSERVER01;Initial Catalog=NotesDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "JwtSettings": {
-    "SecretKey": "Y2IzZDE3ZDEyYmMwZGVkNjQzN2FkZDkzM2JmYjA5YjZlN2EyYjY0N2M=",
+    "SecretKey": "Y2IzZDE3ZDEyYmMwZGVkNjQzN2FkZDkzM2JmYjA5YjZlN2EyYjY0N2M="
   },
   "Logging": {
     "LogLevel": {
