--- a/NotesBackend/NotesBackend.csproj
+++ b/NotesBackend/NotesBackend.csproj
@@ -20,4 +20,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="DTOs\Requests\" />
+    <Folder Include="DTOs\Responses\" />
+  </ItemGroup>
+
 </Project>
