--- a/NotesFrontend/package.json
+++ b/NotesFrontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
