--- a/NotesFrontend/package.json
+++ b/NotesFrontend/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.2.0",
+    "redux": "^5.0.1",
     "tailwindcss": "^4.0.7",
     "uuid": "^11.0.5",
     "yup": "^1.6.1"
@@ -31,6 +35,6 @@
     "globals": "^15.14.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.1"
   }
 }
