[Add] optimal routing and cookies

--- a/NotesBackend/appsettings.json
+++ b/NotesBackend/appsettings.json
@@ -1,9 +1,17 @@
 {
+  "Authentication": {
+    "Cookie": {
+      "SameSite": "None",
+      "SecurePolicy": "Always"
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=MSI\\MSSQLSERVER01;Initial Catalog=NotesDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
-  "JwtSettings": {
-    "SecretKey": "Y2IzZDE3ZDEyYmMwZGVkNjQzN2FkZDkzM2JmYjA5YjZlN2EyYjY0N2M="
+  "Jwt": {
+    "Issuer": "https://localhost:7060",
+    "Audience": "http://localhost:3000",
+    "Key": "Y2IzZDE3ZDEyYmMwZGVkNjQzN2FkZDkzM2JmYjA5YjZlN2EyYjY0N2M="
   },
   "Logging": {
     "LogLevel": {
