--- a/NotesFrontend/package.json
+++ b/NotesFrontend/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
     "bootstrap-icons": "^1.11.3",
+    "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -23,6 +26,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "redux": "^5.0.1",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.7",
     "uuid": "^11.0.5",
     "yup": "^1.6.1"
